--- a/config/charybdis.conf
+++ b/config/charybdis.conf
@@ -2,3 +2,7 @@ CONFIG_ZMK_KEYBOARD_NAME="Charybdis"
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_POINTING=y
