fix(trackball): zmk config

--- a/config/boards/shields/charybdis/charybdis_right.conf
+++ b/config/boards/shields/charybdis/charybdis_right.conf
@@ -7,8 +7,8 @@ CONFIG_PMW3610_SWAP_XY=y
 CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_INVERT_Y=y
 
-PMW3610_CPI=1000
-PMW3610_SNIPE_CPI=400
-PMW3610_SCROLL_TICK=20
+CONFIG_PMW3610_CPI=1000
+CONFIG_PMW3610_SNIPE_CPI=400
+CONFIG_PMW3610_SCROLL_TICK=20
 
-PMW3610_POLLING_RATE_250=y
+CONFIG_PMW3610_POLLING_RATE_250=y
