feat(trackball): test config

--- a/config/boards/shields/charybdis/charybdis_right.conf
+++ b/config/boards/shields/charybdis/charybdis_right.conf
@@ -1,13 +1,20 @@
 CONFIG_SPI=y
 CONFIG_INPUT=y
 CONFIG_ZMK_MOUSE=y
+
+CONFIG_ZMK_EXT_POWER=y
+
 CONFIG_PMW3610=y
 
 CONFIG_PMW3610_INVERT_X=y
-CONFIG_PMW3610_INVERT_Y=y
+CONFIG_PMW3610_ORIENTATION_90=y
 
-CONFIG_PMW3610_CPI=1000
-CONFIG_PMW3610_SNIPE_CPI=400
-CONFIG_PMW3610_SCROLL_TICK=20
+CONFIG_PMW3610_CPI=3200
+CONFIG_PMW3610_CPI_DIVIDOR=4
+CONFIG_PMW3610_SNIPE_CPI=1200
+CONFIG_PMW3610_SNIPE_CPI_DIVIDOR=4
+
+CONFIG_PMW3610_SCROLL_TICK=21
 
 CONFIG_PMW3610_POLLING_RATE_250=y
+CONFIG_PMW3610_SMART_ALGORITHM=y
